# Semantic-Communication

./: .gitignore  PROJECT_DATA_MANAGEMENT.md  pyrightconfig.json  requirements.txt  tmp_analyze_captions.py
VLM_CSC/: BLOCKING_ITEMS.md  README.md  REPRO_STATUS.md  __init__.py  assumptions.md  difference_note.md  engineering_execution_taskbook.md  fig8_reviewed_plan_no_prompt.md  implementation_plan.md  model_integration_audit.md  note.txt  paper_fact_pack_and_dev_taskbook.txt  paper_facts.md  pyproject.toml  repro_report.md  reproduction_report.md  requirements.txt  unresolved.md  vlm_csc_reproduction_agent_prompt.txt  vlm_csc_严格复现实验任务书.txt
VLM_CSC/channels/: __init__.py  awgn.py  rayleigh.py
VLM_CSC/configs/: default.yaml  fig10_jscc.yaml  fig10_vlm_csc.yaml  fig10_witt.yaml  fig7_blip.yaml  fig7_lemon.yaml  fig7_ram.yaml  fig8_med_off.yaml  fig8_med_on.yaml  fig9_nam_off_0db.yaml  fig9_nam_off_2db.yaml  fig9_nam_off_4db.yaml  fig9_nam_off_8db.yaml  fig9_nam_on.yaml  schema.py
VLM_CSC/core/: communication_modules.py  download_ram_weight.py  system_check.py
VLM_CSC/eval/: __init__.py  eval_fig10.py  eval_fig7.py  eval_fig8.py  eval_fig9.py  metrics_image.py  metrics_text.py
VLM_CSC/experiments/: README.md  __init__.py  common.py  exp_fig10.py  exp_fig7.py  exp_fig8.py  exp_fig9.py
VLM_CSC/losses/: __init__.py  compression.py  mutual_info_proxy.py  text_ce.py
VLM_CSC/model/: VLM-CSC.py  __init__.py  download_clip.py  download_sd_tokenizer_files.py  med.py
VLM_CSC/models/: __init__.py  baselines_jscc.py  baselines_witt.py  channel_codec.py  classifier_eval.py  kb_alt_vlm.py  kb_blip.py  kb_sd.py  med.py  nam.py  semantic_codec.py
VLM_CSC/scripts/: __init__.py  analyze_med_similarity.py  prepare_text_cache.py  run_all.py  run_experiments.py  run_fig10.py  run_fig7.py  run_fig8.py  run_fig9.py  smoke_test.py  train_all.py  train_fig10.py  train_fig7.py  train_fig8.py  train_fig9.py  verify_blip.py  verify_ram.py  verify_sd.py
VLM_CSC/tests/: __init__.py  test_channel.py  test_data_pipeline.py  test_fig10_pipeline.py  test_med.py  (+8 more)
(+163 files in other folders)
